# SoulCreator

./: .gitignore  CMakeConfig.h  CMakeConfig.h.in  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL  INSTALL.md  MyLayout.xml  README.md  SoulCreator.py  _advantages_widget_8cpp.html  _advantages_widget_8cpp__incl.map  _advantages_widget_8cpp__incl.md5  _advantages_widget_8h.html  _advantages_widget_8h__dep__incl.map  _advantages_widget_8h__dep__incl.md5  _advantages_widget_8h__incl.map  _advantages_widget_8h__incl.md5  _advantages_widget_8h_source.html  _advantages_widget_8py.html  _attribute_widget_8cpp.html  _attribute_widget_8cpp__incl.map  _attribute_widget_8cpp__incl.md5  _attribute_widget_8h.html  _attribute_widget_8h__dep__incl.map  _attribute_widget_8h__dep__incl.md5  _attribute_widget_8h__incl.map  _attribute_widget_8h__incl.md5  _attribute_widget_8h_source.html  _attribute_widget_8py.html  _background_image_widget_8py.html  _basic_trait_8py.html  _calc_advantages_8cpp.html  _calc_advantages_8cpp__incl.map  _calc_advantages_8cpp__incl.md5  _calc_advantages_8h.html  _calc_advantages_8h__dep__incl.map  _calc_advantages_8h__dep__incl.md5  _calc_advantages_8h__incl.map  (+2001 more)
res/: rc_resource.qrc
res/templates/: base.scd  changeling.scd  human.scd  mage.scd  spirit.scd  vampire.scd  werewolf.scd
resources/: rc_resource.qrc  resource.qrc  resource.qrc.old
resources/stylesheets/: sheet.css  (+15 more)
search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_67.html  classes_69.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_6f.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  classes_75.html  classes_76.html  (+83 more)
src/: .MainWindow.cpp.kate-swp  Config.h  Config.py  Debug.py  Error.py  GlobalState.py  MainWindow.cpp  MainWindow.h  MainWindow.h.orig  MainWindow.py  Random.py  Support.py  Tools.py  main.cpp
src-old/: CharaComboTrait.cpp  CharaComboTrait.h  ComboTraitWidget.cpp  ComboTraitWidget.h
ui/: ConfigDialog.ui  MainWindow.ui  SelectMeritsDialog.ui  ui_AbstractStoreWidget.ui  ui_AdvantagesWidget.py  ui_AdvantagesWidget.ui  ui_CompanionWidget.ui  ui_InfoWidget.ui  ui_ItemWidget.ui  ui_MainWindow.py  ui_MainWindow.ui  ui_NameDialog.py  ui_NameDialog.ui  ui_SettingsDialog.ui  ui_SpecialsWidget.ui  ui_SpecialtiesWidget.ui  ui_TemplateWidget.ui
(+280 files in other folders)
